Enabled upgrade rendering on Composites